Get del estado, activar y desactivar estado y verificar contacto.
